[tool.poetry]
package-mode = false
name = "docker-prefect-ecr"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "^0.17.0"
alembic = "^1.7.5, <2.0.0"
apprise = "^1.1.0, <2.0.0"
asyncpg = "^0.23"
click = "^8.0, <8.2"
cryptography = "^36.0.1"
dateparser = "^1.1.1, <2.0.0"
docker = "^4.0, <7.0"
graphviz = "^0.20.1"
griffe = "^0.20.0"
jinja2 = "^3.0.0, <4.0.0"
jinja2-humanize-extension = "^0.4.0"
humanize = "^4.9.0"
kubernetes = "^24.2.0, <30.0.0"
pytz = "^2021.1, <2025"
readchar = "^4.0.0, <5.0.0"
sqlalchemy = "^1.4.22, !=1.4.33, <3.0.0"
typer = "^0.12.0, !=0.12.2, <0.13.0"
prefect-slack = "^0.2.2"
prefect-aws = "^0.4.16"
prefect-github = "^0.2.4"
openpyxl = "^3.1.2"
pydantic = "^2.7.1"
awswrangler = "^3.7.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
